Moved using sexybuttons, implmented undo, sort-of implemented info boxes.

--- a/index.yaml
+++ b/index.yaml
@@ -14,3 +14,9 @@ indexes:
   properties:
   - name: donator
   - name: date
+
+- kind: PennyDonation
+  properties:
+  - name: donator
+  - name: date
+    direction: desc
