Seperated beneficiaries into seperate Model and added admin page to manage them

--- a/index.yaml
+++ b/index.yaml
@@ -12,6 +12,12 @@ indexes:
 
 - kind: Campaign
   properties:
+  - name: beneficiary
+  - name: count
+    direction: desc
+
+- kind: Campaign
+  properties:
   - name: pledgie_id
   - name: count
 
