--- a/app.yaml
+++ b/app.yaml
@@ -7,5 +7,9 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /admin/.*
+  script: diddydonation.py
+  login: admin
+
 - url: /.*
   script: diddydonation.py
