--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,6 @@
-application: diddydonation-hrd
-version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: false
 
 handlers:
 - url: /static
